--- a/css/style.css
+++ b/css/style.css
@@ -71,18 +71,18 @@ header img {
 	z-index: 1000;
 	display: none;
 }
-.iconMenu{
-	height: 37.5px;
-	overflow: hidden;
+
+#head-logo {
+	width:100%;
+	text-align: center;
+	padding: 0px;
+	margin-top: 120px;
+	margin-bottom: 100px;
 }
-.icon {
-	float: right;
-	cursor: pointer;
-}
-.icon > img {
-	width: 100px;
-	height: auto;
-	margin: auto;
+#head-logo img {
+	width: 25%;
+	min-width: 250px;
+	margin: 0 auto;
 }
 /* navbar */
 #navbar {
